refactored All files, added Flyway